# web13

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migration/: env.py
migration/versions/: 216b5b6bf67a_added_avatar.py  3ca0d46fcd6f_add_contact_password.py  407bbdc209f1_init.py  5b4283dce090_init.py  8bf53d20f912_added_user_to_model.py  994a34ee39b0_add_user.py  9a4184dfc9af_added_confirmed_status.py  d560f737db5f_add_contact_refresh_token.py
postgres-data/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16388  16391  16393  16399  16400  16403  16404  16405  16406  16407  16412  16413  16415  16416  2224  2579  2604  2606  2608  2608_fsm  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  (+7 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
src/services/templates/: reset_password_email.html  verify_email.html
src/templates/: index.html
tests/: test_unit_repository_contacts.py  test_unit_repository_users.py  test_unit_routes_auth.py  test_unit_services_auth.py
